--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ body {
   width: 33.3%;
   position: relative;
   transition: transform 1s;
+  perspective: 1000px;
+  transform-style: preserve-3d;
 }
 
 
@@ -31,5 +33,10 @@ img {
 
 
 .flip {
+  transform: rotateY(180deg);
+}
+
+
+.front_face {
   transform: rotateY(180deg);
 }
