--- a/style.css
+++ b/style.css
@@ -1,9 +1,21 @@
+
 body {
   margin: 0px;
+  background-color: antiquewhite;
+}
+
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
+  z-index: 1000;
 }
 
 #game_grid {
-  border: 2px tomato solid;
+  /* border: 2px tomato solid; */
   width: 600px;
   height: 400px;
   margin: auto;
@@ -39,4 +51,37 @@ img {
 
 .front_face {
   transform: rotateY(180deg);
+}
+
+/* button css */
+button {
+  background-color: #4CAF50;
+  /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+button:hover {
+  background-color: #3e8e41;
+}
+
+#dark_mode {
+  position: absolute;
+  top: 0;
+  right: 0;
+
+}
+
+.stats {
+  /* left right center */
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  margin: 10px;
 }
